# age-of-glory

./: .gitignore  Cargo.toml  README.md  TODO.md  early-prototype-2.heic  early-prototype.heic
screenshots/: all_screenshots_with_guides.xcf
src/: main.rs  render_clock.rs
src/assemble/: main.rs
src/draw/: main.rs  make_listing.rs  render_clock.rs  render_taskbar.rs
src/makelisting/: main.rs
