[package]
name = "age-of-glory"
version = "0.1.0"
edition = "2021"

[dependencies]
# Copied from photon-rs so that it can still work with wasm if we need it to
image = { version = "0.23.4", default-features = false, features = [
  "gif",
  "jpeg",
  "ico",
  "png",
  "pnm",
  "tga",
  "tiff",
  "webp",
  "bmp",
  "hdr",
  "dxt",
  "dds",
  "farbfeld",
] }
# Copied from photon-rs
imageproc = { version = "0.22.0", default-features = false }
libheif-rs = "1.1.0"
photon-rs = {version = "0.3.2", default-features = false}
rayon = "1.10.0"
rusttype = "0.9.3"

[[bin]]
name = "draw"
path = "src/draw/main.rs"

[[bin]]
name = "assemble"
path = "src/assemble/main.rs"
